--- a/examples/default.html
+++ b/examples/default.html
@@ -11,13 +11,7 @@
        
     <script src="..\node_modules\jquery\dist\jquery.js" type="text/javascript"></script>
     <script src="..\lib\google.grafico.js" type="text/javascript"></script>
-    <script src="..\app\app.js" type="text/javascript"></script>
-    <script src="..\app\enumChart.js" type="text/javascript"></script>
-    <script src="..\app\factory\chartFactory.js" type="text/javascript"></script>
-    <script src="..\app\base\chartBase.js" type="text/javascript"></script>
-    <script src="..\app\chart\column.js" type="text/javascript"></script>
-    <script src="..\app\chart\geo.js" type="text/javascript"></script>
-    <script src="..\app\plugin.js" type="text/javascript"></script>
+    <script src="..\bin\chart.min.js" type="text/javascript"></script>
         
 	<script>
 		$(document).ready(function () {
