--- a/examples/default.html
+++ b/examples/default.html
@@ -38,12 +38,16 @@
             { Grupo: 'Bahia', Descricao: 'Real Value', Valor: 20 },
             { Grupo: 'Bahia', Descricao: 'Buy Value', Valor: 20 }
     ], options:{
-        width: 500, 
-        height: 500,
+        width: 1300, 
+        height: 1500,
         region: 'BR',
         resolution: 'provinces'
-        }});
-		});			
+        },
+        select: function (chart) {
+            console.log(chart);
+        }
+     });
+});			
 	</script> 
     
 </body>
